; ModuleID = '/home/carl/AnghaBench/linux/arch/m68k/math-emu/extr_fp_arith.c_fp_fint.c'
source_filename = "/home/carl/AnghaBench/linux/arch/m68k/math-emu/extr_fp_arith.c_fp_fint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.fp_ext = type { i32 }

@PINSTR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"fint\0A\00", align 1
@FPDATA = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.fp_ext* @fp_fint(%struct.fp_ext* %0, %struct.fp_ext* %1) #0 {
  %3 = alloca %struct.fp_ext*, align 8
  %4 = alloca %struct.fp_ext*, align 8
  store %struct.fp_ext* %0, %struct.fp_ext** %3, align 8
  store %struct.fp_ext* %1, %struct.fp_ext** %4, align 8
  %5 = load i32, i32* @PINSTR, align 4
  %6 = call i32 @dprint(i32 %5, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %7 = load %struct.fp_ext*, %struct.fp_ext** %3, align 8
  %8 = load %struct.fp_ext*, %struct.fp_ext** %4, align 8
  %9 = call i32 @fp_copy_ext(%struct.fp_ext* %7, %struct.fp_ext* %8)
  %10 = load %struct.fp_ext*, %struct.fp_ext** %3, align 8
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @FPDATA, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @fp_roundint(%struct.fp_ext* %10, i32 %13)
  %15 = load %struct.fp_ext*, %struct.fp_ext** %3, align 8
  ret %struct.fp_ext* %15
}

declare dso_local i32 @dprint(i32, i8*) #1

declare dso_local i32 @fp_copy_ext(%struct.fp_ext*, %struct.fp_ext*) #1

declare dso_local i32 @fp_roundint(%struct.fp_ext*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
